<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Selfoss</string>
	<string name="selfossInstanceUrl">Selfoss instance URL</string>
	<string name="requireAuthentication">Require authentication</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="validate">Validate</string>
	<string name="checking">Checking…</string>
	<string name="success">Success !</string>
	<string name="error_url">Unable to reach the server.</string>
	<string name="error_usernamePassword">Authentication failed</string>
	<string name="newest">Newest</string>
	<string name="favorite">Favorite</string>
	<string name="unread">Unread</string>
	<string name="tags">Tags</string>
	<string name="error">Error !</string>
	<string name="certificate_error">Certificate error !</string>
	<string name="certificate_error_message">Certificate of %s can\'t be verified.\nTrust it anyway
		?
	</string>
	<string name="allTags">All tags</string>
	<string name="noArticle">No article.</string>
	<string name="synchronize">Synchronize</string>
	<string name="loading">Loading…</string>
	<string name="noMoreArticle">No more article.</string>
	<string name="error_loading">An error occurred.\nTouch to try again.</string>
	<string name="openInBrowser">Open in browser</string>

</resources>
