<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/bg_menu">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/url"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:paddingTop="8dp"
			android:paddingBottom="8dp"
			android:paddingLeft="16dp"
			android:paddingRight="32dp"
			android:drawableLeft="@drawable/ic_cloud"
			android:drawablePadding="8dp"
			android:textColor="@color/menu_text_primary"
			android:textSize="22sp"
			android:background="@drawable/clickable_background_selfoss"/>

		<View
			style="@style/MenuSectionDivider"/>

		<LinearLayout
			android:id="@+id/newest"
			style="@style/MenuTypeContainer">

			<TextView
				style="@style/MenuTypeText"
				android:text="@string/newest"/>

		</LinearLayout>

		<View style="@style/MenuDivider"/>

		<LinearLayout
			android:id="@+id/unread"
			style="@style/MenuTypeContainer">

			<TextView
				style="@style/MenuTypeText"
				android:text="@string/unread"/>

		</LinearLayout>

		<View style="@style/MenuDivider"/>

		<LinearLayout
			android:id="@+id/favorite"
			style="@style/MenuTypeContainer">

			<TextView
				style="@style/MenuTypeText"
				android:text="@string/favorite"/>

		</LinearLayout>

		<TextView
			style="@style/MenuSectionText"
			android:text="@string/tags"/>

		<View style="@style/MenuSectionDivider"/>

		<LinearLayout
			android:id="@+id/tagContainer"
			android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" />

	</LinearLayout>

</ScrollView>